<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Login progress -->



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:transitionName="profile"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/bg" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_log_in"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_height="45dp"
                    android:elevation="5dp"
                    android:clickable="true"
                    android:background="@drawable/bg_login"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginTop="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <TextView
                            android:id="@+id/txt_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/action_log_in"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="#ffffff" />

                        <ProgressBar
                            android:id="@+id/login_progress"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:visibility="invisible"
                            android:layout_marginLeft="5dp"
                            android:indeterminateTint="@color/white" />
                    </RelativeLayout>

                </FrameLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>